--- a/html/ds.html
+++ b/html/ds.html
@@ -184,7 +184,7 @@
                         </div>
                         <div class="doctorsDescription sick">
                             <i class="fas fa-clipboard-list"></i>
-                            <p><strong>Doenças:</strong> obesidade, diabetes e dislipidemias</p>
+                            <p><strong>Doenças:</strong> Obesidade, Diabetes e Dislipidemias</p>
                         </div>
                         <div class="doctorsDescription apoint">
                             <i class="fas fa-stethoscope"></i>
@@ -192,15 +192,15 @@
                         </div>
                         <div class="doctorsDescription areas">
                             <i class="fas fa-file-medical-alt"></i>
-                            <p><strong>Áreas de Diferenciação:</strong> nutrição na gravidez, nutrição na diabetes
-                                gestacional e nutrição nas doenças metabólicas (obesidade, diabetes e dislipidemias)</p>
+                            <p><strong>Áreas de Diferenciação:</strong> Nutrição na gravidez, Nutrição na diabetes
+                                gestacional e Nutrição nas doenças metabólicas</p>
                         </div>
                     </div>
                 </div>
                 <div class="schedule fade-in">
                     <h3>Horario:</h3>
                     <ul>
-                        <li><strong>Sexta-feira:</strong> 14h-16h (da segunda semana de cada mês na Clínica do Porto)
+                        <li><strong>Sexta-feira:</strong> 14h-16h (na segunda semana de cada mês na Clínica do Porto)
                         </li>
                     </ul>
                 </div>
@@ -234,16 +234,16 @@
                             <li>03/2012 a 02/2016 - Nutricionista na Santa Casa da Misericórdia de Baião</li>
                             <li>Desde 2011 - Consulta de Nutrição e Avaliação da Composição Corporal na Clínica Gynébe
                                 Porto</li>
-                            <li>11/2003 a 08/2004 - Elaboração de um Plano de Actividades de Nutrição 2003/2004 do
+                            <li>11/2003 a 08/2004 - Elaboração de um Plano de Actividades de Nutrição do
                                 Centro de Saúde de Paredes</li>
-                            <li>Desde 2002 - Consulta de nutrição clínica e elaboração do Manual de Dietas Hospitalares
+                            <li>Desde 2002 - Consulta de Nutrição Clínica e elaboração do Manual de Dietas Hospitalares
                                 no Hospital das Forças Armadas do Porto</li>
                             <li>10/1999 a 09/2000 - Estágio académico realizado na Unidade de Endocrinologia do Hospital
                                 de São
                                 João do Porto.</li>
                         </ul>
                         <ul class="text-formation">
-                            <li>De 1995 até 2000 - Licenciatura em Ciências da Nutrição e Alimentação</li>
+                            <li>1995-2000 - Licenciatura em Ciências da Nutrição e Alimentação</li>
                         </ul>
                         <ul class="text-science">
                             <li>Presente em vários congressos e reuniões científicas.</li>
