--- a/html/mb.html
+++ b/html/mb.html
@@ -190,7 +190,8 @@
                         </div>
                         <div class="doctorsDescription apoint">
                             <i class="fas fa-stethoscope"></i>
-                            <p><strong>Consultas:</strong> Consulta de Psicologia</p>
+                            <p><strong>Consultas:</strong> Consulta Psicologia Clínica - Teleconsulta Psicologia
+                            </p>
                         </div>
                         <div class="doctorsDescription areas">
                             <i class="fas fa-file-medical-alt"></i>
@@ -202,9 +203,9 @@
                 <div class="schedule fade-in">
                     <h3>Horario:</h3>
                     <ul>
-                        <li><strong>Terça-feira:</strong> 10h-13h (consulta online)</li>
-                        <li><strong>Quinta-feira:</strong> 16h-20h (consulta online)</li>
-                        <li><strong>Sexta-feira:</strong> 16h-20h (consulta presencial na Clínica do Porto)</li>
+                        <li><strong>Terça-feira:</strong> 10h-13h (Teleconsulta)</li>
+                        <li><strong>Quinta-feira:</strong> 16h-20h (Teleconsulta)</li>
+                        <li><strong>Sexta-feira:</strong> 16h-20h (Consulta presencial na Clínica do Porto)</li>
                     </ul>
                 </div>
                 <div class="box9-wrapper1">
@@ -235,7 +236,7 @@
                         <ul class="text-activity open">
                             <li>Exerce funções no domínio da Psicologia Clínica e da Saúde ao nível do
                                 diagnóstico psicométrico, acompanhamento psicopedagógico e psicoterapêutico
-                                de crianças, jovens e adultos no Gabinete de Psicologia Clínica (2008-2016).</li>
+                                de crianças, jovens e adultos no Gabinete de Psicologia Clínica.</li>
                             <li>Desde 2006, é responsável pela Consulta de Psicologia na Clínica Gynébe. No
                                 âmbito da Consulta de Psicologia, e em colaboração com os profissionais que
                                 trabalham nesta clínica, tem desenvolvido actividades de avaliação/intervenção
