--- a/html/mca.html
+++ b/html/mca.html
@@ -185,8 +185,7 @@
                         <div class="doctorsDescription sick">
                             <i class="fas fa-clipboard-list"></i>
                             <p><strong>Doenças:</strong> Doenças do aparelho genital feminino, Gravidez,
-                                Infertilidade,
-                                Menopausa</p>
+                                Infertilidade, Menopausa</p>
                         </div>
                         <div class="doctorsDescription apoint">
                             <i class="fas fa-stethoscope"></i>
@@ -195,9 +194,8 @@
                         </div>
                         <div class="doctorsDescription areas">
                             <i class="fas fa-file-medical-alt"></i>
-                            <p><strong>Áreas de Diferenciação:</strong> Gravidez de Alto Risco, Cirurgia
-                                Ginecológica / Laparoscopia, Estudo de Infertilidade,
-                                Ecografia Ginecológica e Obstétrica</p>
+                            <p><strong>Áreas de Diferenciação:</strong> Gravidez de Alto Risco, Sexualidade, Estudo de
+                                Infertilidade, Ecografia Ginecológica e Obstétrica, Cirurgias e Partos</p>
                         </div>
                     </div>
                 </div>
@@ -236,25 +234,27 @@
                             <h4>Sociedades Científicas</h4>
                         </div>
                         <ul class="text-activity open">
-                            <li>2013 - Assistente graduado em Obstetrícia (grau de consultor)</li>
-                            <li>Desde 2003 - Diretora em Clinica Privada</li>
+                            <li>2013 - Assistente Graduada em Obstetrícia (Grau de Consultor)</li>
+                            <li>Desde 2003 - Diretora Clínica na Clinica Gynébe</li>
                             <li>2000-2006 - Assistente em Obstetrícia, responsável pela Cirurgia Laparoscópica e
                                 Consulta de Alto Risco, Hospital de Braga</li>
-                            <li>1999-2000 - Assistente eventual de ginecologia e de obstetrícia, Hospital de Santo
+                            <li>Desde 2000 - Exerce actividade no sector privado, nomeadamente em Clínicas e vários
+                                Hospitais Privados.</li>
+                            <li>1999-2000 - Assistente eventual de Ginecologia e de Obstetrícia, Hospital de Santo
                                 António, Porto</li>
                             <li>1992-1998 - Internato complementar, Hospital de Santo António, Porto</li>
                             <li>1990-1991 - Internato geral, Hospital de Santo António, Porto</li>
                         </ul>
                         <ul class="text-formation">
-                            <li>2004 - Certificado de competência em Ecografia Fetal, Fetal Medicine Foundation
-                                Licenciatura em Medicina</li>
+                            <li>2004 - Certificado de competência em Ecografia Fetal, Fetal Medicine Foundation</li>
+                            <li>1999 - Licenciatura em Medicina pelo ICBAS - Universidade do Porto</li>
                         </ul>
                         <ul class="text-science">
                             <li>2004 - Assistente convidada em Obstetrícia, Faculdade de Medicina de Braga</li>
                             <li>1994-1996 - Assistente convidada de Ginecologia e de Obstetrícia, Instituto de Ciências
                                 Biomédicas Abel Salazar (ICBAS)</li>
                             <li>Publicações em revistas científicas</li>
-                            <li>Participações em trabalhos de investigação clinica e elaboração de protocolo</li>
+                            <li>Participações em trabalhos de investigação clinica e elaboração de protocolos</li>
                             <li>Co-orientação em tese de doutoramento</li>
                         </ul>
                         <ul class="text-sociaty">
