--- a/html/mb.html
+++ b/html/mb.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html>
 
 <head>
     <title>
-    Test
-</title>
-<meta charset="utf-8">
+        Dra. Marta Baltar
+    </title>
+    <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no" />
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
@@ -234,40 +234,72 @@
             <div class="overlay"></div>
             <div class="wrapper7">
                 <div class="heading1 fade-in">
-                    <h2>Dra. Marta Baltar</h2>
-                    <h3><strong>Especialidade:</strong> Psicologia</h3>
+                    <h2>
+                        Dra. Marta Baltar
+                    </h2>
+                    <h3><strong>
+                            Especialidade:
+                        </strong>
+                         Psicologia
+                    </h3>
                 </div>
                 <div class="box8-wrapper1">
                     <div class="box8 fade-in">
                         <img src="../images/profile.png" alt="">
                         <div class="doctorsDescription language">
                             <i class="fas fa-globe-europe"></i>
-                            <p><strong>Idiomas:</strong> Português</p>
+                            <p><strong>
+                                    Idiomas:
+                                </strong>
+                                 Português
+                            </p>
                         </div>
                         <div class="doctorsDescription sick">
                             <i class="fas fa-clipboard-list"></i>
-                            <p><strong>Doenças:</strong> Ansiedade e/ou depressão, Distúrbios do sono, Problemas
-                                conjugais, Depressão pós-parto, Problemas de fertilidade, Dificuldades parentais,
-                                Separação e divórcio</p>
+                            <p><strong>
+                                    Doenças:
+                                </strong>
+                                 Ansiedade e/ou depressão, Distúrbios do sono, Problemas conjugais, Depressão pós-parto, Problemas de fertilidade, Dificuldades parentais, Separação e divórcio
+                            </p>
                         </div>
                         <div class="doctorsDescription apoint">
                             <i class="fas fa-stethoscope"></i>
-                            <p><strong>Consultas:</strong> Consulta Psicologia Clínica - Teleconsulta Psicologia
+                            <p><strong>
+                                    Consultas:
+                                </strong>
+                                 Consulta Psicologia Clínica - Teleconsulta Psicologia
                             </p>
                         </div>
                         <div class="doctorsDescription areas">
                             <i class="fas fa-file-medical-alt"></i>
-                            <p><strong>Áreas de Diferenciação:</strong> Intervenção psicoterapêutica em crianças,
-                                jovens e adultos</p>
+                            <p><strong>
+                                    Áreas de Diferenciação:
+                                </strong>
+                                 Intervenção psicoterapêutica em crianças, jovens e adultos
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="schedule fade-in">
-                    <h3>Horario:</h3>
+                    <h3>
+                        Horario:
+                    </h3>
                     <ul>
-                        <li><strong>Terça-feira:</strong> 10h-13h (Teleconsulta)</li>
-                        <li><strong>Quinta-feira:</strong> 16h-20h (Teleconsulta)</li>
-                        <li><strong>Sexta-feira:</strong> 16h-20h (Consulta presencial na Clínica do Porto)</li>
+                        <li><strong>
+                                Terça-feira:
+                            </strong>
+                             10h-13h (Teleconsulta)
+                        </li>
+                        <li><strong>
+                                Quinta-feira:
+                            </strong>
+                             16h-20h (Teleconsulta)
+                        </li>
+                        <li><strong>
+                                Sexta-feira:
+                            </strong>
+                             16h-20h (Consulta presencial na Clínica do Porto)
+                        </li>
                     </ul>
                 </div>
                 <div class="box9-wrapper1">
@@ -275,57 +307,76 @@
                         <div class="box9-background"></div>
                         <div class="bar-holder">
                             <div class="chevronDown"></div>
-                            <p>Atividade Clínica</p>
+                            <p>
+                                Atividade Clínica
+                            </p>
                         </div>
                         <ul class="tab-holder">
-                            <li class="activity">Atividade Clínica</li>
-                            <li class="formation">Formação Académica</li>
-                            <li class="science">Atividade Científica</li>
-                            <li class="sociaty">Sociedades Científicas</li>
+                            <li class="activity">
+                                Atividade Clínica
+                            </li>
+                            <li class="formation">
+                                Formação Académica
+                            </li>
+                            <li class="science">
+                                Atividade Científica
+                            </li>
+                            <li class="sociaty">
+                                Sociedades Científicas
+                            </li>
                         </ul>
                         <div class="activity">
-                            <h4>Atividade Clínica</h4>
+                            <h4>
+                                Atividade Clínica
+                            </h4>
                         </div>
                         <div class="formation">
-                            <h4>Formação Académica</h4>
+                            <h4>
+                                Formação Académica
+                            </h4>
                         </div>
                         <div class="science">
-                            <h4>Atividade Científica</h4>
+                            <h4>
+                                Atividade Científica
+                            </h4>
                         </div>
                         <div class="sociaty">
-                            <h4>Sociedades Científicas</h4>
+                            <h4>
+                                Sociedades Científicas
+                            </h4>
                         </div>
                         <ul class="text-activity open">
-                            <li>Exerce funções no domínio da Psicologia Clínica e da Saúde ao nível do
-                                diagnóstico psicométrico, acompanhamento psicopedagógico e psicoterapêutico
-                                de crianças, jovens e adultos no Gabinete de Psicologia Clínica.</li>
-                            <li>Desde 2006, é responsável pela Consulta de Psicologia na Clínica Gynébe. No
-                                âmbito da Consulta de Psicologia, e em colaboração com os profissionais que
-                                trabalham nesta clínica, tem desenvolvido actividades de avaliação/intervenção
-                                psicológica de crianças, jovens e adultos em situação de risco devido a problemas
-                                emocionais e/ou de aprendizagem, perturbações da parentalidade, problemas de
-                                infertilidade no casal, depressão pós-parto, problemas sexuais e conjugais,
-                                separação e divórcio.</li>
-                            <li>Exerceu funções no domínio da Psicologia Clínica Infantil e Juvenil ao nível do
-                                diagnóstico psicométrico, acompanhamento psicoterapêutico e psicopedagógico,
-                                na Clínica Médico-Cirúrgica do Marco de Canaveses (1989-1990).</li>
-                            <li>Participou no Programa Interministerial de Promoção do Sucesso Educativo no
-                                Ensino Básico (Ministério da Educação), sendo as modalidades de actuação e sua
-                                avaliação no domínio da dinamização psicopedagógica da comunidade, dos
-                                agentes de ensino, dos pais e dos alunos (1988-1992).</li>
-                            <li>Formação de Especialidade na área de Psicoterapia: 2o ano do Curso de Pós-
-                                Graduação pela Sociedade Portuguesa de Psicologia Clínica (1991-1993).</li>
+                            <li>
+                                Exerce funções no domínio da Psicologia Clínica e da Saúde ao nível do diagnóstico psicométrico, acompanhamento psicopedagógico e psicoterapêutico de crianças, jovens e adultos no Gabinete de Psicologia Clínica.
+                            </li>
+                            <li>
+                                Desde 2006, é responsável pela Consulta de Psicologia na Clínica Gynébe. No âmbito da Consulta de Psicologia, e em colaboração com os profissionais que trabalham nesta clínica, tem desenvolvido actividades de avaliação/intervenção psicológica de crianças, jovens e adultos em situação de risco devido a problemas emocionais e/ou de aprendizagem, perturbações da parentalidade, problemas de infertilidade no casal, depressão pós-parto, problemas sexuais e conjugais, separação e divórcio.
+                            </li>
+                            <li>
+                                Exerceu funções no domínio da Psicologia Clínica Infantil e Juvenil ao nível do diagnóstico psicométrico, acompanhamento psicoterapêutico e psicopedagógico, na Clínica Médico-Cirúrgica do Marco de Canaveses (1989-1990).
+                            </li>
+                            <li>
+                                Participou no Programa Interministerial de Promoção do Sucesso Educativo no Ensino Básico (Ministério da Educação), sendo as modalidades de actuação e sua avaliação no domínio da dinamização psicopedagógica da comunidade, dos agentes de ensino, dos pais e dos alunos (1988-1992).
+                            </li>
+                            <li>
+                                Formação de Especialidade na área de Psicoterapia: 2o ano do Curso de Pós- Graduação pela Sociedade Portuguesa de Psicologia Clínica (1991-1993).
+                            </li>
                         </ul>
                         <ul class="text-formation">
-                            <li>Doutoramento em Psicologia pela Faculdade de Psicologia e de Ciências da
-                                Educação da Universidade do Porto, em 2005.</li>
-                            <li>Mestrado em Psicopatologia e Psicologia Clínica pelo Instituto Superior de
-                                Psicologia Aplicada, em 1998.</li>
-                            <li>Licenciatura em Psicologia pela Faculdade de Psicologia e de Ciências da
-                                Educação da Universidade de Lisboa.</li>
+                            <li>
+                                Doutoramento em Psicologia pela Faculdade de Psicologia e de Ciências da Educação da Universidade do Porto, em 2005.
+                            </li>
+                            <li>
+                                Mestrado em Psicopatologia e Psicologia Clínica pelo Instituto Superior de Psicologia Aplicada, em 1998.
+                            </li>
+                            <li>
+                                Licenciatura em Psicologia pela Faculdade de Psicologia e de Ciências da Educação da Universidade de Lisboa.
+                            </li>
                         </ul>
                         <ul class="text-science">
-                            <li>Vários trabalhos de investigação, comunicações e publicações de âmbito nacional.</li>
+                            <li>
+                                Vários trabalhos de investigação, comunicações e publicações de âmbito nacional.
+                            </li>
                         </ul>
                         <ul class="text-sociaty">
 
@@ -338,6 +389,13 @@
                           FOOTER
 =========================================================-->
         <footer id="footer">
+    <div class="languangeButton">
+        <a href="">
+            <i class="fas fa-globe"></i>
+            <span>PT/</span>
+            <span>EN</span>
+        </a>
+    </div>
     <div class="footer_menu">
         <div class="socials">
             <ul class="socials1">
@@ -355,10 +413,10 @@
                         Início
                     </a></li>
                 <li class="fade-in"><a href="specialties.html">
-                        Especialidades >
+                        Especialidades
                     </a></li>
                 <li class="fade-in"><a href="agreements.html">
-                        Convenções >
+                        Convenções
                     </a></li>
                 <li class="fade-in"><a href="contacts.html">
                         Contactos
@@ -383,6 +441,7 @@
             <script src="../js/headerNavbar.js"></script>
             <script src="../js/headerNavbarButtons.js"></script>
             <script src="../js/cv.js"></script>
+            <script src="../js/languange.js"></script>
 </body>
 
 </html>
