--- a/html/ac.html
+++ b/html/ac.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html>
 
 <head>
     <title>
-    Test
-</title>
-<meta charset="utf-8">
+        Dra. Ana Carriço
+    </title>
+    <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no" />
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
@@ -234,27 +234,49 @@
             <div class="overlay"></div>
             <div class="wrapper7">
                 <div class="heading1 fade-in">
-                    <h2>Dra. Ana Carriço</h2>
-                    <h3><strong>Especialidade:</strong> Cardiologia Pediátrica</h3>
+                    <h2>
+                        Dra. Ana Carriço
+                    </h2>
+                    <h3><strong>
+                            Especialidade:
+                        </strong>
+                         Cardiologia Pediátrica
+                    </h3>
                 </div>
                 <div class="box8-wrapper1">
                     <div class="box8 fade-in">
                         <img src="../images/profile.png" alt="">
                         <div class="doctorsDescription language">
                             <i class="fas fa-globe-europe"></i>
-                            <p><strong>Idiomas:</strong> Português e Inglês</p>
+                            <p><strong>
+                                    Idiomas:
+                                </strong>
+                                 Português e Inglês
+                            </p>
                         </div>
                         <div class="doctorsDescription sick">
                             <i class="fas fa-clipboard-list"></i>
-                            <p><strong>Doenças:</strong> Insuficiência cardíaca</p>
+                            <p><strong>
+                                    Doenças:
+                                </strong>
+                                 Insuficiência cardíaca
+                            </p>
                         </div>
                         <div class="doctorsDescription apoint">
                             <i class="fas fa-stethoscope"></i>
-                            <p><strong>Exames:</strong> Ecocardiografia Fetal e Eco-Doppler Cardíaco Fetal</p>
+                            <p><strong>
+                                    Exames:
+                                </strong>
+                                 Ecocardiografia Fetal e Eco-Doppler Cardíaco Fetal
+                            </p>
                         </div>
                         <div class="doctorsDescription areas">
                             <i class="fas fa-file-medical-alt"></i>
-                            <p><strong>Áreas de Diferenciação:</strong> Medicina fetal e Ecocardiografia</p>
+                            <p><strong>
+                                    Áreas de Diferenciação:
+                                </strong>
+                                 Medicina fetal e Ecocardiografia
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -263,41 +285,76 @@
                         <div class="box9-background"></div>
                         <div class="bar-holder">
                             <div class="chevronDown"></div>
-                            <p>Atividade Clínica</p>
+                            <p>
+                                Atividade Clínica
+                            </p>
                         </div>
                         <ul class="tab-holder">
-                            <li class="activity">Atividade Clínica</li>
-                            <li class="formation">Formação Académica</li>
-                            <li class="science">Atividade Científica</li>
-                            <li class="sociaty">Sociedades Científicas</li>
+                            <li class="activity">
+                                Atividade Clínica
+                            </li>
+                            <li class="formation">
+                                Formação Académica
+                            </li>
+                            <li class="science">
+                                Atividade Científica
+                            </li>
+                            <li class="sociaty">
+                                Sociedades Científicas
+                            </li>
                         </ul>
                         <div class="activity">
-                            <h4>Atividade Clínica</h4>
+                            <h4>
+                                Atividade Clínica
+                            </h4>
                         </div>
                         <div class="formation">
-                            <h4>Formação Académica</h4>
+                            <h4>
+                                Formação Académica
+                            </h4>
                         </div>
                         <div class="science">
-                            <h4>Atividade Científica</h4>
+                            <h4>
+                                Atividade Científica
+                            </h4>
                         </div>
                         <div class="sociaty">
-                            <h4>Sociedades Científicas</h4>
+                            <h4>
+                                Sociedades Científicas
+                            </h4>
                         </div>
                         <ul class="text-activity open">
-                            <li>Cardiologista pediátrica no Hospital da Luz Arrábida</li>
-                            <li>Desde 2008 - Assistente Hospitalar no Hospital de Vila Nova de Gaia</li>
-                            <li>Desde 2005 - Cardiologista pediátrica na Clínica Gynébe do Porto</li>
-                            <li>2004-2008 - Assistente Hospitalar Eventual no Hospital de São João, Porto</li>
-                            <li>1999-2004 - Internato Complementar no Hospital de São João, Porto</li>
+                            <li>
+                                Cardiologista pediátrica no Hospital da Luz Arrábida
+                            </li>
+                            <li>
+                                Desde 2008 - Assistente Hospitalar no Hospital de Vila Nova de Gaia
+                            </li>
+                            <li>
+                                Desde 2005 - Cardiologista pediátrica na Clínica Gynébe do Porto
+                            </li>
+                            <li>
+                                2004-2008 - Assistente Hospitalar Eventual no Hospital de São João, Porto
+                            </li>
+                            <li>
+                                1999-2004 - Internato Complementar no Hospital de São João, Porto
+                            </li>
                         </ul>
                         <ul class="text-formation">
-                            <li>2004 - Grau de Especialista em Cardiologia Pediátrica</li>
-                            <li>1996 - Licenciatura em Medicina no Instituto de Ciências Biomédicas Abel Salazar, Porto
+                            <li>
+                                2004 - Grau de Especialista em Cardiologia Pediátrica
+                            </li>
+                            <li>
+                                1996 - Licenciatura em Medicina no Instituto de Ciências Biomédicas Abel Salazar, Porto
                             </li>
                         </ul>
                         <ul class="text-science">
-                            <li>É autora de vários artigos, apresentações e comunicações livres.</li>
-                            <li>Pertenceu à comissão organizadora de várias reuniões científicas</li>
+                            <li>
+                                É autora de vários artigos, apresentações e comunicações livres.
+                            </li>
+                            <li>
+                                Pertenceu à comissão organizadora de várias reuniões científicas
+                            </li>
                         </ul>
                         <ul class="text-sociaty">
                         </ul>
@@ -309,6 +366,13 @@
                           FOOTER
 =========================================================-->
         <footer id="footer">
+    <div class="languangeButton">
+        <a href="">
+            <i class="fas fa-globe"></i>
+            <span>PT/</span>
+            <span>EN</span>
+        </a>
+    </div>
     <div class="footer_menu">
         <div class="socials">
             <ul class="socials1">
@@ -326,10 +390,10 @@
                         Início
                     </a></li>
                 <li class="fade-in"><a href="specialties.html">
-                        Especialidades >
+                        Especialidades
                     </a></li>
                 <li class="fade-in"><a href="agreements.html">
-                        Convenções >
+                        Convenções
                     </a></li>
                 <li class="fade-in"><a href="contacts.html">
                         Contactos
@@ -354,6 +418,7 @@
             <script src="../js/headerNavbar.js"></script>
             <script src="../js/headerNavbarButtons.js"></script>
             <script src="../js/cv.js"></script>
+            <script src="../js/languange.js"></script>
 </body>
 
 </html>
