--- a/html/gv.html
+++ b/html/gv.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html>
 
 <head>
     <title>
-    Test
-</title>
-<meta charset="utf-8">
+        Dra. Gabriela Vasconcellos
+    </title>
+    <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no" />
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
@@ -234,35 +234,62 @@
             <div class="overlay"></div>
             <div class="wrapper7">
                 <div class="heading1 fade-in">
-                    <h2>Dra. Gabriela Vasconcellos</h2>
-                    <h3><strong>Especialidade:</strong> Pediatra-Neonatologista</h3>
+                    <h2>
+                        Dra. Gabriela Vasconcellos
+                    </h2>
+                    <h3><strong>
+                            Especialidade:
+                        </strong>
+                         Pediatra-Neonatologista
+                    </h3>
                 </div>
                 <div class="box8-wrapper1">
                     <div class="box8 fade-in">
                         <img src="../images/gv.jpg" alt="">
                         <div class="doctorsDescription language">
                             <i class="fas fa-globe-europe"></i>
-                            <p><strong>Idiomas:</strong> Português, Inglês e Francês</p>
+                            <p><strong>
+                                    Idiomas:
+                                </strong>
+                                 Português, Inglês e Francês
+                            </p>
                         </div>
                         <div class="doctorsDescription sick">
                             <i class="fas fa-clipboard-list"></i>
-                            <p><strong>Doenças:</strong> Icterícia Neonatal</p>
+                            <p><strong>
+                                    Doenças:
+                                </strong>
+                                 Icterícia Neonatal
+                            </p>
                         </div>
                         <div class="doctorsDescription apoint">
                             <i class="fas fa-stethoscope"></i>
-                            <p><strong>Consultas:</strong> Consulta Neonatologia - Consulta Pediatria - Consulta
-                                Pré-Natal com Pediatra - Teleconsulta Pediatria</p>
+                            <p><strong>
+                                    Consultas:
+                                </strong>
+                                 Consulta Neonatologia - Consulta Pediatria - Consulta Pré-Natal com Pediatra - Teleconsulta Pediatria
+                            </p>
                         </div>
                         <div class="doctorsDescription areas">
                             <i class="fas fa-file-medical-alt"></i>
-                            <p><strong>Áreas de Diferenciação:</strong> Neonatologia</p>
+                            <p><strong>
+                                    Áreas de Diferenciação:
+                                </strong>
+                                 Neonatologia
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="schedule fade-in">
-                    <h3>Horario:</h3>
+                    <h3>
+                        Horario:
+                    </h3>
                     <ul>
-                        <li><strong>Terça-feira:</strong> 15h30-18h30 (Clínica do Porto)</li>
+                        <li><strong>
+                                Terça-feira:
+                            </strong>
+                             15h30-18h30 (Clínica do Porto)
+                        </li>
                     </ul>
                 </div>
                 <div class="box9-wrapper1">
@@ -270,62 +297,108 @@
                         <div class="box9-background"></div>
                         <div class="bar-holder">
                             <div class="chevronDown"></div>
-                            <p>Atividade Clínica</p>
+                            <p>
+                                Atividade Clínica
+                            </p>
                         </div>
                         <ul class="tab-holder">
-                            <li class="activity">Atividade Clínica</li>
-                            <li class="formation">Formação Académica</li>
-                            <li class="science">Atividade Científica</li>
-                            <li class="sociaty">Sociedades Científicas</li>
+                            <li class="activity">
+                                Atividade Clínica
+                            </li>
+                            <li class="formation">
+                                Formação Académica
+                            </li>
+                            <li class="science">
+                                Atividade Científica
+                            </li>
+                            <li class="sociaty">
+                                Sociedades Científicas
+                            </li>
                         </ul>
                         <div class="activity">
-                            <h4>Atividade Clínica</h4>
+                            <h4>
+                                Atividade Clínica
+                            </h4>
                         </div>
                         <div class="formation">
-                            <h4>Formação Académica</h4>
+                            <h4>
+                                Formação Académica
+                            </h4>
                         </div>
                         <div class="science">
-                            <h4>Atividade Científica</h4>
+                            <h4>
+                                Atividade Científica
+                            </h4>
                         </div>
                         <div class="sociaty">
-                            <h4>Sociedades Científicas</h4>
+                            <h4>
+                                Sociedades Científicas
+                            </h4>
                         </div>
                         <ul class="text-activity open">
-                            <li>Desde a titulação em Pediatria Médica que exerce actividade no sector privado,
-                                nomeadamente em clinicas, particularmente da área de apoio materno-infantil.
+                            <li>
+                                Desde a titulação em Pediatria Médica que exerce actividade no sector privado, nomeadamente em clinicas, particularmente da área de apoio materno-infantil.
                             </li>
-                            <li>Desde 2010 - Coordenação da Neonatologia do Hospital CUF Porto</li>
-                            <li>2008 - Coordenadora do Sector de Perinatologia da UAG-Mulher e da Criança do H.S.João -
-                                Porto</li>
-                            <li>2007 - Grau de Consultor da Carreira Médica Hospitalar</li>
-                            <li>2006 - Grau de Assistente Hospitalar Graduada</li>
-                            <li>Desde 2000 - Chefia de equipa de urgência de Neonatologia no mesmo Serviço</li>
-                            <li>1997- Provimento para lugar de Assistente Hospitalar de Pediatria Médica no H.S.João -
-                                Porto</li>
-                            <li>1996-1997 - Ciclo de Estudos Especiais de Neonatologia</li>
-                            <li>1992 - Estágio de Pediatria no Queen Elizabeth Hospital for Children em Londres -
-                                Inglaterra</li>
-                            <li>1991-1995 - Internato Complementar de Pediatria Médica no Hospital de S. João - Porto
+                            <li>
+                                Desde 2010 - Coordenação da Neonatologia do Hospital CUF Porto
                             </li>
-                            <li>1990 - Internato Complementar de Clinica Geral e Medicina Familiar</li>
-                            <li>1988-1989 - Internato Geral no Hospital de V. N. Famalicão</li>
+                            <li>
+                                2008 - Coordenadora do Sector de Perinatologia da UAG-Mulher e da Criança do H.S.João - Porto
+                            </li>
+                            <li>
+                                2007 - Grau de Consultor da Carreira Médica Hospitalar
+                            </li>
+                            <li>
+                                2006 - Grau de Assistente Hospitalar Graduada
+                            </li>
+                            <li>
+                                Desde 2000 - Chefia de equipa de urgência de Neonatologia no mesmo Serviço
+                            </li>
+                            <li>
+                                1997- Provimento para lugar de Assistente Hospitalar de Pediatria Médica no H.S.João - Porto
+                            </li>
+                            <li>
+                                1996-1997 - Ciclo de Estudos Especiais de Neonatologia
+                            </li>
+                            <li>
+                                1992 - Estágio de Pediatria no Queen Elizabeth Hospital for Children em Londres - Inglaterra
+                            </li>
+                            <li>
+                                1991-1995 - Internato Complementar de Pediatria Médica no Hospital de S. João - Porto
+                            </li>
+                            <li>
+                                1990 - Internato Complementar de Clinica Geral e Medicina Familiar
+                            </li>
+                            <li>
+                                1988-1989 - Internato Geral no Hospital de V. N. Famalicão
+                            </li>
                         </ul>
                         <ul class="text-formation">
-                            <li>1987 - Intercâmbio hospitalar em Cirurgia Geral - Hospital Distrital de Torino - Itália
+                            <li>
+                                1987 - Intercâmbio hospitalar em Cirurgia Geral - Hospital Distrital de Torino - Itália
                             </li>
-                            <li>1986 -Intercâmbio hospitalar em Ginecologia - Hospital Universitário de Mainz - Alemanha
+                            <li>
+                                1986 -Intercâmbio hospitalar em Ginecologia - Hospital Universitário de Mainz - Alemanha
                             </li>
-                            <li>1981-1987 - Licenciatura em Medicina pela Faculdade de Medicina da Universidade do Porto
+                            <li>
+                                1981-1987 - Licenciatura em Medicina pela Faculdade de Medicina da Universidade do Porto
                             </li>
                         </ul>
                         <ul class="text-science">
-                            <li>Vários trabalhos de investigação, comunicações e publicações de âmbito nacional e
-                                internacional.</li>
+                            <li>
+                                Vários trabalhos de investigação, comunicações e publicações de âmbito nacional e internacional.
+                            </li>
                         </ul>
                         <ul class="text-sociaty">
-                            <li>Sociedade Portuguesa de Pediatria</li>
-                            <li>Sociedade Portuguesa de Neonatologia</li>
-                            <li>Sociedade Portuguesa de Doenças Metabólicas</li>
+                            <li>
+                                Sociedade Portuguesa de Pediatria
+                            </li>
+                            <li>
+                                Sociedade Portuguesa de Neonatologia
+                            </li>
+                            <li>
+                                Sociedade Portuguesa de Doenças Metabólicas
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -335,6 +408,13 @@
                           FOOTER
 =========================================================-->
         <footer id="footer">
+    <div class="languangeButton">
+        <a href="">
+            <i class="fas fa-globe"></i>
+            <span>PT/</span>
+            <span>EN</span>
+        </a>
+    </div>
     <div class="footer_menu">
         <div class="socials">
             <ul class="socials1">
@@ -352,10 +432,10 @@
                         Início
                     </a></li>
                 <li class="fade-in"><a href="specialties.html">
-                        Especialidades >
+                        Especialidades
                     </a></li>
                 <li class="fade-in"><a href="agreements.html">
-                        Convenções >
+                        Convenções
                     </a></li>
                 <li class="fade-in"><a href="contacts.html">
                         Contactos
@@ -380,6 +460,7 @@
             <script src="../js/headerNavbar.js"></script>
             <script src="../js/headerNavbarButtons.js"></script>
             <script src="../js/cv.js"></script>
+            <script src="../js/languange.js"></script>
 </body>
 
 </html>
