--- a/html/lc.html
+++ b/html/lc.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html>
 
 <head>
     <title>
-    Test
-</title>
-<meta charset="utf-8">
+        Dra. Leonilde Coelho
+    </title>
+    <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no" />
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
@@ -234,35 +234,62 @@
             <div class="overlay"></div>
             <div class="wrapper7">
                 <div class="heading1 fade-in">
-                    <h2>Dra. Leonilde Coelho</h2>
-                    <h3><strong>Especialidade:</strong> Endocrinologia</h3>
+                    <h2>
+                        Dra. Leonilde Coelho
+                    </h2>
+                    <h3><strong>
+                            Especialidade:
+                        </strong>
+                         Endocrinologia
+                    </h3>
                 </div>
                 <div class="box8-wrapper1">
                     <div class="box8 fade-in">
                         <img src="../images/lc.jpg" alt="">
                         <div class="doctorsDescription language">
                             <i class="fas fa-globe-europe"></i>
-                            <p><strong>Idiomas:</strong> Português</p>
+                            <p><strong>
+                                    Idiomas:
+                                </strong>
+                                 Português
+                            </p>
                         </div>
                         <div class="doctorsDescription sick">
                             <i class="fas fa-clipboard-list"></i>
-                            <p><strong>Doenças:</strong> Diabetes, Patologia da Tiroide</p>
+                            <p><strong>
+                                    Doenças:
+                                </strong>
+                                 Diabetes, Patologia da Tiroide
+                            </p>
                         </div>
                         <div class="doctorsDescription apoint">
                             <i class="fas fa-stethoscope"></i>
-                            <p><strong>Consultas:</strong> Consulta de Endocrinologia - Consulta de Diabetes - Consulta
-                                Multidisciplinar de Cirurgia Bariátrica</p>
+                            <p><strong>
+                                    Consultas:
+                                </strong>
+                                 Consulta de Endocrinologia - Consulta de Diabetes - Consulta Multidisciplinar de Cirurgia Bariátrica
+                            </p>
                         </div>
                         <div class="doctorsDescription areas">
                             <i class="fas fa-file-medical-alt"></i>
-                            <p><strong>Áreas de Diferenciação:</strong> Diabetes e Cirurgia Bariátrica</p>
+                            <p><strong>
+                                    Áreas de Diferenciação:
+                                </strong>
+                                 Diabetes e Cirurgia Bariátrica
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="schedule fade-in">
-                    <h3>Horario:</h3>
+                    <h3>
+                        Horario:
+                    </h3>
                     <ul>
-                        <li><strong>Terça-feira:</strong> 11h30-13h00 (Clínica do Porto)</li>
+                        <li><strong>
+                                Terça-feira:
+                            </strong>
+                             11h30-13h00 (Clínica do Porto)
+                        </li>
                     </ul>
                 </div>
                 <div class="box9-wrapper1">
@@ -270,51 +297,87 @@
                         <div class="box9-background"></div>
                         <div class="bar-holder">
                             <div class="chevronDown"></div>
-                            <p>Atividade Clínica</p>
+                            <p>
+                                Atividade Clínica
+                            </p>
                         </div>
                         <ul class="tab-holder">
-                            <li class="activity">Atividade Clínica</li>
-                            <li class="formation">Formação Académica</li>
-                            <li class="science">Atividade Científica</li>
-                            <li class="sociaty">Sociedades Científicas</li>
+                            <li class="activity">
+                                Atividade Clínica
+                            </li>
+                            <li class="formation">
+                                Formação Académica
+                            </li>
+                            <li class="science">
+                                Atividade Científica
+                            </li>
+                            <li class="sociaty">
+                                Atividade Clínica
+                            </li>
                         </ul>
                         <div class="activity">
-                            <h4>Atividade Clínica</h4>
+                            <h4>
+                                Atividade Clínica
+                            </h4>
                         </div>
                         <div class="formation">
-                            <h4>Formação Académica</h4>
+                            <h4>
+                                Formação Académica
+                            </h4>
                         </div>
                         <div class="science">
-                            <h4>Atividade Científica</h4>
+                            <h4>
+                                Atividade Científica
+                            </h4>
                         </div>
                         <div class="sociaty">
-                            <h4>Sociedades Científicas</h4>
+                            <h4>
+                                Sociedades Científicas
+                            </h4>
                         </div>
                         <ul class="text-activity open">
-                            <li>Desde 2008 - Assistente Graduada de Endocrinologia.</li>
-                            <li>Desde 2006 - Colaboração na Consulta Multidisciplinar de Diabetes e Patologia da Tiroide
-                                na Gravidez na Clínica Gynébe do Porto</li>
-                            <li>Desde 2005 - Assistente Hospitalar de Endocrinologia no Hospital Militar do Porto, agora
-                                denominado Hospital das Forças Armadas - Pólo do Porto.</li>
-                            <li>2001-2005 - Assistente Hospitalar de Endocrinologia no Hospital de S. Marcos – Braga.
+                            <li>
+                                Desde 2008 - Assistente Graduada de Endocrinologia.
                             </li>
-                            <li>2000 - Assistente Eventual de Endocrinologia no IPO-Porto.</li>
-                            <li>Até 2000 - Internato complementar de Endocrinologia no Hospital de Sto. António.</li>
+                            <li>
+                                Desde 2006 - Colaboração na Consulta Multidisciplinar de Diabetes e Patologia da Tiroide na Gravidez na Clínica Gynébe do Porto
+                            </li>
+                            <li>
+                                Desde 2005 - Assistente Hospitalar de Endocrinologia no Hospital Militar do Porto, agora denominado Hospital das Forças Armadas - Pólo do Porto.
+                            </li>
+                            <li>
+                                2001-2005 - Assistente Hospitalar de Endocrinologia no Hospital de S. Marcos – Braga.
+                            </li>
+                            <li>
+                                2000 - Assistente Eventual de Endocrinologia no IPO-Porto.
+                            </li>
+                            <li>
+                                Até 2000 - Internato complementar de Endocrinologia no Hospital de Sto. António.
+                            </li>
                         </ul>
                         <ul class="text-formation">
-                            <li>1991 - Licenciatura em Medicina e Cirurgia pela Faculdade de Medicina da Universidade
-                                do Porto</li>
+                            <li>
+                                1991 - Licenciatura em Medicina e Cirurgia pela Faculdade de Medicina da Universidade do Porto
+                            </li>
                         </ul>
                         <ul class="text-science">
-                            <li>Participação em diversos cursos de valorização e actualização profissional e reuniões
-                                científicas nacionais e internacionais</li>
-                            <li>Organização, colaboração e participação em vários congressos, jornadas e
-                                workshops</li>
+                            <li>
+                                Participação em diversos cursos de valorização e actualização profissional e reuniões científicas nacionais e internacionais
+                            </li>
+                            <li>
+                                Organização, colaboração e participação em vários congressos, jornadas e workshops
+                            </li>
                         </ul>
                         <ul class="text-sociaty">
-                            <li>Membro do Grupo de Estudos da Ge-TNE</li>
-                            <li>Membro do grupo de estudos da Tiróide</li>
-                            <li>Sócia da SPEDM – Sociedade Portuguesa de Endocrinologia, Diabetes e Metabolismo</li>
+                            <li>
+                                Membro do Grupo de Estudos da Ge-TNE
+                            </li>
+                            <li>
+                                Membro do grupo de estudos da Tiróide
+                            </li>
+                            <li>
+                                Sócia da SPEDM – Sociedade Portuguesa de Endocrinologia, Diabetes e Metabolismo
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -324,6 +387,13 @@
                           FOOTER
 =========================================================-->
         <footer id="footer">
+    <div class="languangeButton">
+        <a href="">
+            <i class="fas fa-globe"></i>
+            <span>PT/</span>
+            <span>EN</span>
+        </a>
+    </div>
     <div class="footer_menu">
         <div class="socials">
             <ul class="socials1">
@@ -341,10 +411,10 @@
                         Início
                     </a></li>
                 <li class="fade-in"><a href="specialties.html">
-                        Especialidades >
+                        Especialidades
                     </a></li>
                 <li class="fade-in"><a href="agreements.html">
-                        Convenções >
+                        Convenções
                     </a></li>
                 <li class="fade-in"><a href="contacts.html">
                         Contactos
@@ -369,6 +439,7 @@
             <script src="../js/headerNavbar.js"></script>
             <script src="../js/headerNavbarButtons.js"></script>
             <script src="../js/cv.js"></script>
+            <script src="../js/languange.js"></script>
 </body>
 
 </html>
