--- a/html/mca.html
+++ b/html/mca.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html>
 
 <head>
     <title>
-    Test
-</title>
-<meta charset="utf-8">
+        Dra. Manuela Calado Araújo
+    </title>
+    <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no" />
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
@@ -234,40 +234,77 @@
             <div class="overlay"></div>
             <div class="wrapper7">
                 <div class="heading1 fade-in">
-                    <h2>Dra. Manuela Calado Araújo</h2>
-                    <h3><strong>Especialidade:</strong> Ginecologia-Obstetrícia</h3>
+                    <h2>
+                        Dra. Manuela Calado Araújo
+                    </h2>
+                    <h3><strong>
+                            Especialidade:
+                        </strong>
+                         Ginecologia-Obstetrícia
+                    </h3>
                 </div>
                 <div class="box8-wrapper1">
                     <div class="box8 fade-in">
                         <img src="../images/mca.jpg" alt="">
                         <div class="doctorsDescription language">
                             <i class="fas fa-globe-europe"></i>
-                            <p><strong>Idiomas:</strong> Português, Inglês e Espanhol</p>
+                            <p><strong>
+                                    Idiomas:
+                                </strong>
+                                 Português, Inglês e Espanhol
+                            </p>
                         </div>
                         <div class="doctorsDescription sick">
                             <i class="fas fa-clipboard-list"></i>
-                            <p><strong>Doenças:</strong> Doenças do aparelho genital feminino, Gravidez,
-                                Infertilidade, Menopausa</p>
+                            <p><strong>
+                                    Doenças:
+                                </strong>
+                                 Doenças do aparelho genital feminino, Gravidez, Infertilidade, Menopausa
+                            </p>
                         </div>
                         <div class="doctorsDescription apoint">
                             <i class="fas fa-stethoscope"></i>
-                            <p><strong>Consultas:</strong> Consulta Ginecologia - Consulta Obstetrícia - Teleconsulta
-                                Ginecologia</p>
+                            <p><strong>
+                                    Consultas:
+                                </strong>
+                                 Consulta Ginecologia - Consulta Obstetrícia - Teleconsulta Ginecologia
+                            </p>
                         </div>
                         <div class="doctorsDescription areas">
                             <i class="fas fa-file-medical-alt"></i>
-                            <p><strong>Áreas de Diferenciação:</strong> Gravidez de Alto Risco, Sexualidade, Estudo de
-                                Infertilidade, Ecografia Ginecológica e Obstétrica, Cirurgias e Partos</p>
+                            <p><strong>
+                                    Áreas de Diferenciação:
+                                </strong>
+                                 Gravidez de Alto Risco, Sexualidade, Estudo de Infertilidade, Ecografia Ginecológica e Obstétrica, Cirurgias e Partos
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="schedule fade-in">
-                    <h3>Horario:</h3>
+                    <h3>
+                        Horario:
+                    </h3>
                     <ul>
-                        <li><strong>Segunda-feira:</strong> 14h40-19h (Clínica de S.Tirso)</li>
-                        <li><strong>Terça-feira:</strong> 10h-19h (Clínica do Porto)</li>
-                        <li><strong>Quarta-feira:</strong> 9h-12h40 (Clínica de S.Tirso)</li>
-                        <li><strong>Sexta-feira:</strong> 10h-19h (Clínica do Porto)</li>
+                        <li><strong>
+                                Segunda-feira:
+                            </strong>
+                             14h40-19h (Clínica de S.Tirso)
+                        </li>
+                        <li><strong>
+                                Terça-feira:
+                            </strong>
+                             10h-19h (Clínica do Porto)
+                        </li>
+                        <li><strong>
+                                Quarta-feira:
+                            </strong>
+                             9h-12h40 (Clínica de S.Tirso)
+                        </li>
+                        <li><strong>
+                                Sexta-feira:
+                            </strong>
+                             10h-19h (Clínica do Porto)
+                        </li>
                     </ul>
                 </div>
                 <div class="box9-wrapper1">
@@ -275,55 +312,105 @@
                         <div class="box9-background"></div>
                         <div class="bar-holder">
                             <div class="chevronDown"></div>
-                            <p>Atividade Clínica</p>
+                            <p>
+                                Atividade Clínica
+                            </p>
                         </div>
                         <ul class="tab-holder">
-                            <li class="activity">Atividade Clínica</li>
-                            <li class="formation">Formação Académica</li>
-                            <li class="science">Atividade Científica</li>
-                            <li class="sociaty">Sociedades Científicas</li>
+                            <li class="activity">
+                                Atividade Clínica
+                            </li>
+                            <li class="formation">
+                                Formação Académica
+                            </li>
+                            <li class="science">
+                                Atividade Científica
+                            </li>
+                            <li class="sociaty">
+                                Sociedades Científicas
+                            </li>
                         </ul>
                         <div class="activity">
-                            <h4>Atividade Clínica</h4>
+                            <h4>
+                                Atividade Clínica
+                            </h4>
                         </div>
                         <div class="formation">
-                            <h4>Formação Académica</h4>
+                            <h4>
+                                Formação Académica
+                            </h4>
                         </div>
                         <div class="science">
-                            <h4>Atividade Científica</h4>
+                            <h4>
+                                Atividade Científica
+                            </h4>
                         </div>
                         <div class="sociaty">
-                            <h4>Sociedades Científicas</h4>
+                            <h4>
+                                Sociedades Científicas
+                            </h4>
                         </div>
                         <ul class="text-activity open">
-                            <li>2013 - Assistente Graduada em Obstetrícia (Grau de Consultor)</li>
-                            <li>Desde 2003 - Diretora Clínica na Clinica Gynébe</li>
-                            <li>2000-2006 - Assistente em Obstetrícia, responsável pela Cirurgia Laparoscópica e
-                                Consulta de Alto Risco, Hospital de Braga</li>
-                            <li>Desde 2000 - Exerce actividade no sector privado, nomeadamente em Clínicas e vários
-                                Hospitais Privados.</li>
-                            <li>1999-2000 - Assistente eventual de Ginecologia e de Obstetrícia, Hospital de Santo
-                                António, Porto</li>
-                            <li>1992-1998 - Internato complementar, Hospital de Santo António, Porto</li>
-                            <li>1990-1991 - Internato geral, Hospital de Santo António, Porto</li>
+                            <li>
+                                2013 - Assistente Graduada em Obstetrícia (Grau de Consultor)
+                            </li>
+                            <li>
+                                Desde 2003 - Diretora Clínica na Clinica Gynébe
+                            </li>
+                            <li>
+                                2000-2006 - Assistente em Obstetrícia, responsável pela Cirurgia Laparoscópica e Consulta de Alto Risco, Hospital de Braga
+                            </li>
+                            <li>
+                                Desde 2000 - Exerce actividade no sector privado, nomeadamente em Clínicas e vários Hospitais Privados.
+                            </li>
+                            <li>
+                                1999-2000 - Assistente eventual de Ginecologia e de Obstetrícia, Hospital de Santo António, Porto
+                            </li>
+                            <li>
+                                1992-1998 - Internato complementar, Hospital de Santo António, Porto
+                            </li>
+                            <li>
+                                1990-1991 - Internato geral, Hospital de Santo António, Porto
+                            </li>
                         </ul>
                         <ul class="text-formation">
-                            <li>2004 - Certificado de competência em Ecografia Fetal, Fetal Medicine Foundation</li>
-                            <li>1999 - Licenciatura em Medicina pelo ICBAS - Universidade do Porto</li>
+                            <li>
+                                2004 - Certificado de competência em Ecografia Fetal, Fetal Medicine Foundation
+                            </li>
+                            <li>
+                                1999 - Licenciatura em Medicina pelo ICBAS - Universidade do Porto
+                            </li>
                         </ul>
                         <ul class="text-science">
-                            <li>2004 - Assistente Convidada de Obstetrícia, Faculdade de Medicina de Braga</li>
-                            <li>1994-1996 - Assistente Convidada de Ginecologia e de Obstetrícia, Instituto de Ciências
-                                Biomédicas Abel Salazar (ICBAS)</li>
-                            <li>Publicações em revistas científicas</li>
-                            <li>Participações em trabalhos de investigação clinica e elaboração de protocolos</li>
-                            <li>Co-orientação em tese de doutoramento</li>
+                            <li>
+                                2004 - Assistente Convidada de Obstetrícia, Faculdade de Medicina de Braga
+                            </li>
+                            <li>
+                                1994-1996 - Assistente Convidada de Ginecologia e de Obstetrícia, Instituto de Ciências Biomédicas Abel Salazar (ICBAS)
+                            </li>
+                            <li>
+                                Publicações em revistas científicas
+                            </li>
+                            <li>
+                                Participações em trabalhos de investigação clinica e elaboração de protocolos
+                            </li>
+                            <li>
+                                Co-orientação em tese de doutoramento
+                            </li>
                         </ul>
                         <ul class="text-sociaty">
-                            <li>Sociedade Portuguesa de Obstetrícia e Medicina Materno Fetal</li>
-                            <li>Sociedade Portuguesa de Ginecologia</li>
-                            <li>Sociedade Portuguesa da Medicina da Reprodução</li>
-                            <li>Associação Portuguesa de Neurourologia e Uroginecologia</li>
+                            <li>
+                                Sociedade Portuguesa de Obstetrícia e Medicina Materno Fetal
+                            </li>
+                            <li>
+                                Sociedade Portuguesa de Ginecologia
+                            </li>
+                            <li>
+                                Sociedade Portuguesa da Medicina da Reprodução
+                            </li>
+                            <li>
+                                Associação Portuguesa de Neurourologia e Uroginecologia
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -333,6 +420,13 @@
                           FOOTER
 =========================================================-->
         <footer id="footer">
+    <div class="languangeButton">
+        <a href="">
+            <i class="fas fa-globe"></i>
+            <span>PT/</span>
+            <span>EN</span>
+        </a>
+    </div>
     <div class="footer_menu">
         <div class="socials">
             <ul class="socials1">
@@ -350,10 +444,10 @@
                         Início
                     </a></li>
                 <li class="fade-in"><a href="specialties.html">
-                        Especialidades >
+                        Especialidades
                     </a></li>
                 <li class="fade-in"><a href="agreements.html">
-                        Convenções >
+                        Convenções
                     </a></li>
                 <li class="fade-in"><a href="contacts.html">
                         Contactos
@@ -378,6 +472,7 @@
             <script src="../js/headerNavbar.js"></script>
             <script src="../js/headerNavbarButtons.js"></script>
             <script src="../js/cv.js"></script>
+            <script src="../js/languange.js"></script>
 </body>
 
 </html>
