--- a/html/en/agreements.html
+++ b/html/en/agreements.html
@@ -220,10 +220,10 @@
             </address>
         </a>
         <p>
-            Telephone assistance
+            24H Emergency
         </p>
         <p>
-            for 24h emergency
+            Telephone assistance
         </p>
     </div>
 </header>
@@ -408,7 +408,7 @@
                             <p>
                                 Visit the <a href="http://www.medis.pt/pt-pt/Pages/default.aspx"
                                         target="_blank">
-                                        website Médis
+                                        Médis website
                                     </a>
                             </p>
                             <p>
@@ -450,7 +450,7 @@
                             <p>
                                 Visit the <a href="http://www.rnamedical.pt/pt/home/"
                                         target="_blank"></a>
-                                    website RNA Medical
+                                    RNA Medical website
                                         </a>
                             </p>
                         </div>
@@ -467,7 +467,7 @@
                             </h3>
                             <p>
                                 Visit the <a href="http://www.sibanca.pt/" target="_blank">
-                                        website SAMS-SIB
+                                        SAMS-SIB website
                                     </a>
                             </p>
                         </div>
@@ -484,7 +484,7 @@
                             </h3>
                             <p>
                                 Visit the <a href="https://ami.org.pt/" target="_blank">
-                                        website AMI
+                                        AMI website
                                     </a>
                             </p>
                         </div>
