--- a/html/en/ds.html
+++ b/html/en/ds.html
@@ -220,10 +220,10 @@
             </address>
         </a>
         <p>
-            Telephone assistance
+            24H Emergency
         </p>
         <p>
-            for 24h emergency
+            Telephone assistance
         </p>
     </div>
 </header>
@@ -265,9 +265,9 @@
                         <div class="doctorsDescription apoint">
                             <i class="fas fa-stethoscope"></i>
                             <p><strong>
-                                    Consultations:
+                                    appointments:
                                 </strong>
-                                 Nutrition Consultation
+                                 Nutrition appointment
                             </p>
                         </div>
                         <div class="doctorsDescription areas">
@@ -343,7 +343,7 @@
                                 03/2012 to 02/2016 - Nutritionist at Santa Casa da Misericórdia de Baião
                             </li>
                             <li>
-                                Since 2011 - Nutrition Consultation and Body Composition Assessment at Gynébe Clinic Porto
+                                Since 2011 - Nutrition appointment and Body Composition Assessment at Gynébe Clinic Porto
                             </li>
                             <li>
                                 11/2003 a 08/2004 - Elaboration of a Nutrition Activities Plan for the Health Center of Paredes
