--- a/html/en/gv.html
+++ b/html/en/gv.html
@@ -220,10 +220,10 @@
             </address>
         </a>
         <p>
-            Telephone assistance
+            24H Emergency
         </p>
         <p>
-            for 24h emergency
+            Telephone assistance
         </p>
     </div>
 </header>
@@ -265,9 +265,9 @@
                         <div class="doctorsDescription apoint">
                             <i class="fas fa-stethoscope"></i>
                             <p><strong>
-                                    Consultations:
+                                    Appointments:
                                 </strong>
-                                 Neonatology Consultation - Pediatric Consultation - Prenatal Consultation with a Pediatrician - Pediatric Teleconsultation
+                                 Neonatology appointment - Pediatric appointment - Prenatal appointment with a Pediatrician - Pediatric Remote appointment
                             </p>
                         </div>
                         <div class="doctorsDescription areas">
