--- a/html/en/lc.html
+++ b/html/en/lc.html
@@ -220,10 +220,10 @@
             </address>
         </a>
         <p>
-            Telephone assistance
+            24H Emergency
         </p>
         <p>
-            for 24h emergency
+            Telephone assistance
         </p>
     </div>
 </header>
@@ -265,9 +265,9 @@
                         <div class="doctorsDescription apoint">
                             <i class="fas fa-stethoscope"></i>
                             <p><strong>
-                                    Consultations:
+                                    Appointments:
                                 </strong>
-                                 Endocrinology Consultation - Diabetes Consultation - Multidisciplinary Bariatric Surgery Consultation
+                                 Endocrinology appointment - Diabetes appointment - Multidisciplinary Bariatric Surgery appointment
                             </p>
                         </div>
                         <div class="doctorsDescription areas">
@@ -340,7 +340,7 @@
                                 Since 2008 - Graduated Assistant in Endocrinology.
                             </li>
                             <li>
-                                Since 2006 - Collaboration in the Multidisciplinary Consultation of Diabetes and Thyroid Pathology in Pregnancy at Gynébe Clinic in Porto
+                                Since 2006 - Collaboration in the Multidisciplinary appointment of Diabetes and Thyroid Pathology in Pregnancy at Gynébe Clinic in Porto
                             </li>
                             <li>
                                 Since 2005 - Hospital Assistant in Endocrinology at Hospital Militar do Porto, now called Hospital das Forças Armadas - Pólo do Porto.
