--- a/html/en/mb.html
+++ b/html/en/mb.html
@@ -220,10 +220,10 @@
             </address>
         </a>
         <p>
-            Telephone assistance
+            24H Emergency
         </p>
         <p>
-            for 24h emergency
+            Telephone assistance
         </p>
     </div>
 </header>
@@ -259,15 +259,15 @@
                             <p><strong>
                                     Diseases:
                                 </strong>
-                                 Ansiedade e/ou depressão, Distúrbios do sono, Problemas conjugais, Depressão pós-parto, Problemas de fertilidade, Dificuldades parentais, Separação e divórcio
+                                 Anxiety or depression, sleep issues, marital issues, postpartum depression, Infertility, parental difficulties, separation and divorce
                             </p>
                         </div>
                         <div class="doctorsDescription apoint">
                             <i class="fas fa-stethoscope"></i>
                             <p><strong>
-                                    Consultations:
+                                    Appointments:
                                 </strong>
-                                 Clinical Psychology Consultation - Psychology Teleconsultation
+                                 Clinical Psychology Appointments - Psychology Remote appointment
                             </p>
                         </div>
                         <div class="doctorsDescription areas">
@@ -288,12 +288,12 @@
                         <li><strong>
                                 Tuesday:
                             </strong>
-                             10h-13h (Teleconsultation)
+                             10h-13h (Remote appointment)
                         </li>
                         <li><strong>
                                 Thursday:
                             </strong>
-                             16h-20h (Teleconsultation)
+                             16h-20h (Remote appointment)
                         </li>
                         <li><strong>
                                 Friday:
@@ -350,7 +350,7 @@
                                 She works in the field of Clinical and Health Psychology in psychometric diagnosis, psycho-pedagogical and psychotherapeutic monitoring of children, youth and adults in the Clinical Psychology Office.
                             </li>
                             <li>
-                                Since 2006, she is responsible for the Psychology Consultation at the Gynébe Clinic. Within the Psychology Consultation, and in collaboration with the professionals working in this clinic, she has developed psychological assessment/intervention activities for children, youth and adults at risk due to emotional and/or learning problems, parenting disorders, infertility problems in couples, postpartum depression, sexual and marital problems, separation and divorce.
+                                Since 2006, she is responsible for the Psychology appointment at the Gynébe Clinic. Within the Psychology appointment, and in collaboration with the professionals working in this clinic, she has developed psychological assessment/intervention activities for children, youth and adults at risk due to emotional and/or learning problems, parenting disorders, infertility problems in couples, postpartum depression, sexual and marital problems, separation and divorce.
                             </li>
                             <li>
                                 Worked in the field of Child and Youth Clinical Psychology in psychometric diagnosis, psychotherapeutic and psycho-pedagogical follow-up at the Marco de Canaveses Medical-Surgical Clinic (1989-1990).
