--- a/html/en/mca.html
+++ b/html/en/mca.html
@@ -220,10 +220,10 @@
             </address>
         </a>
         <p>
-            Telephone assistance
+            24H Emergency
         </p>
         <p>
-            for 24h emergency
+            Telephone assistance
         </p>
     </div>
 </header>
@@ -265,9 +265,9 @@
                         <div class="doctorsDescription apoint">
                             <i class="fas fa-stethoscope"></i>
                             <p><strong>
-                                    Consultations:
+                                    Appointments:
                                 </strong>
-                                 Gynecology Consultation - Obstetrics Consultation - Gynecology Teleconsultation
+                                 Gynecology appointment - Obstetrics appointment - Gynecology remote appointment
                             </p>
                         </div>
                         <div class="doctorsDescription areas">
@@ -358,7 +358,7 @@
                                 Since 2003 - Clinical Director at Clinica Gynébe
                             </li>
                             <li>
-                                2000-2006 - Obstetrics Assistant, responsible for Laparoscopic Surgery and High Risk Consultation, Braga Hospital
+                                2000-2006 - Obstetrics Assistant, responsible for Laparoscopic Surgery and High Risk appointment, Braga Hospital
                             </li>
                             <li>
                                 Since 2000 - Has worked in the private sector, namely in clinics and several private hospitals.
