--- a/html/en/specialties.html
+++ b/html/en/specialties.html
@@ -220,10 +220,10 @@
             </address>
         </a>
         <p>
-            Telephone assistance
+            24H Emergency
         </p>
         <p>
-            for 24h emergency
+            Telephone assistance
         </p>
     </div>
 </header>
@@ -281,7 +281,7 @@
                                 Endometriosis
                             </li>
                             <li>
-                                Study of Couple Infertility
+                                Study of the Couple Infertility
                             </li>
                             <li>
                                 Menopause
@@ -358,7 +358,7 @@
                             Pediatrics follows the newborn from birth through early adulthood. Regular follow-up in Pediatrics aims at the healthy growth and promotion of the physical and psychological well-being of children and adolescents, acting with preventive and curative character.
                         </p>
                         <p class="fade-in">
-                            Pediatrics consultation encompasses a wide area, such as:
+                            Pediatrics encompasses a wide area, such as:
                         </p>
                         <button aria-label="Pediatria"><i class="fas fa-chevron-down"></i></button>
                         <ul class="list1__inset1">
@@ -397,7 +397,7 @@
                             The thyroid, pancreas, pituitary glands, adrenals, parathyroid glands, ovaries, and testes are the best known endocrine glands, but bone and adipose tissue also play an important role in the production of hormones.
                         </p>
                         <p class="fade-in">
-                            The situations that most bring the patient to the consultation are:
+                            The situations that most bring the patient to the practise are:
                         </p>
                         <button aria-label="Endocrinologia"><i class="fas fa-chevron-down"></i></button>
                         <ul class="list1__inset1">
@@ -460,13 +460,13 @@
                                 Work Problems
                             </li>
                             <li>
-                                Marital Problems
+                                Marital Issues
                             </li>
                             <li>
                                 Postpartum Depression
                             </li>
                             <li>
-                                Infertility Problems
+                                Infertility
                             </li>
                             <li>
                                 Parental Difficulties
@@ -486,7 +486,7 @@
                             <!-- https://unsplash.com/photos/QZub8Ni3x_c -->
                         </h3>
                         <p class="fade-in">
-                            In the nutrition consultation, the nutritional needs are evaluated and the dietary planning is customized to each situation and specific goal.
+                            In our nutrition appointments, the nutritional needs are evaluated and the dietary planning is customized to each individual situation and specific goal.
                         </p>
                         <p class="fade-in">
                             Learning to have healthy eating habits, in addition to weight loss, aims at improving the quality of physical and emotional life, as well as the most diverse pathologies.
