--- a/html/en/contacts_santo_tirso.html
+++ b/html/en/contacts_santo_tirso.html
@@ -222,10 +222,10 @@
             </address>
         </a>
         <p>
-            Telephone assistance
+            24H Emergency
         </p>
         <p>
-            for 24h emergency
+            Telephone assistance
         </p>
     </div>
 </header>
