--- a/html/en/index.html
+++ b/html/en/index.html
@@ -220,10 +220,10 @@
             </address>
         </a>
         <p>
-            Telephone assistance
+            24H Emergency
         </p>
         <p>
-            for 24h emergency
+            Telephone assistance
         </p>
     </div>
 </header>
@@ -401,7 +401,7 @@
                         <div class="slide-in">
                             <i class="fa fa-check" aria-hidden="true"></i>
                             <p>
-                                Consultations in Portuguese, English and Spanish
+                                appointments in Portuguese, English and Spanish
                             </p>
                         </div>
                         <div class="slide-in">
@@ -445,7 +445,7 @@
                         <div class="slide-in">
                             <i class="fa fa-check" aria-hidden="true"></i>
                             <p>
-                                Location in the heart of OPorto city
+                                Location in the heart of Oporto city
                             </p>
                         </div>
                         <div class="slide-in" data-wow-duration="1s" data-wow-delay="0.4s">
