--- a/html/en/privacy.html
+++ b/html/en/privacy.html
@@ -220,10 +220,10 @@
             </address>
         </a>
         <p>
-            Telephone assistance
+            24H Emergency
         </p>
         <p>
-            for 24h emergency
+            Telephone assistance
         </p>
     </div>
 </header>
