--- a/html/en/index.html
+++ b/html/en/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="../../css/styles.css">
 <!-- endbuild -->
 <script src="https://kit.fontawesome.com/9e78371ef2.js" crossorigin="anonymous"></script>
+            <meta name="google-site-verification" content="53MDoHSYLfPjjOB4xKOcpDzR1PWCV3m-4wi6nup6TRU" />
     </head>
 
     <body>
@@ -312,7 +313,7 @@
                                     Dra. Gabriela Vasconcellos
                                 </a></h3>
                             <p>
-                                Pediatra/Neonatologista
+                                Pediatrician/Neonatologist
                             </p>
                         </div>
 
@@ -324,7 +325,7 @@
                                 </a>
                             </h3>
                             <p>
-                                Pediatrician/Neonatologist
+                                Pediatric Cardiologist
                             </p>
                         </div>
 
