--- a/html/index.html
+++ b/html/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="../css/styles.css">
 <!-- endbuild -->
 <script src="https://kit.fontawesome.com/9e78371ef2.js" crossorigin="anonymous"></script>
+            <meta name="google-site-verification" content="53MDoHSYLfPjjOB4xKOcpDzR1PWCV3m-4wi6nup6TRU" />
     </head>
 
     <body>
